--- a/LinkerPlayer/Styles/SolidColorBrushes.xaml
+++ b/LinkerPlayer/Styles/SolidColorBrushes.xaml
@@ -15,6 +15,8 @@
   <SolidColorBrush x:Key="MainWindowGradientStartBrush" Color="{DynamicResource MainWindowGradientStartColor}" />
   <SolidColorBrush x:Key="MainWindowGradientEndBrush" Color="{DynamicResource MainWindowGradientEndColor}" />
 
+  <SolidColorBrush x:Key="ChildWindowBackgroundBrush" Color="{DynamicResource ChildWindowBackgroundColor}" />
+
   <SolidColorBrush x:Key="FirstDarkBrush" Color="{DynamicResource FirstDarkColor}" />
   <SolidColorBrush x:Key="FirstLightBrush" Color="{DynamicResource FirstLightColor}" />
   <SolidColorBrush x:Key="FirstBackgroundBrush" Color="{DynamicResource FirstBackgroundColor}" />
@@ -23,8 +25,8 @@
   <SolidColorBrush x:Key="StandardTextForegroundBrush" Color="{DynamicResource StandardTextForegroundColor}" />
   <SolidColorBrush x:Key="InactiveSelectionBrush" Color="{DynamicResource InactiveSelectionColor}" />
 
-  <SolidColorBrush x:Key="PlaylistItemForegroundBrush" Color="{DynamicResource PlaylistItemForegroundColor}" />
-  <SolidColorBrush x:Key="PlaylistItemBackgroundBrush" Color="{DynamicResource PlaylistItemBackgroundColor}" />
+  <SolidColorBrush x:Key="PlaylistTabForegroundBrush" Color="{DynamicResource PlaylistTabForegroundColor}" />
+  <SolidColorBrush x:Key="PlaylistTabBackgroundBrush" Color="{DynamicResource PlaylistTabBackgroundColor}" />
   <SolidColorBrush x:Key="PlaylistMouseOverItemForegroundBrush" Color="{DynamicResource PlaylistMouseOverItemForegroundColor}" />
   <SolidColorBrush x:Key="PlaylistMouseOverItemBackgroundBrush" Color="{DynamicResource PlaylistMouseOverItemBackgroundColor}" />
 
@@ -38,7 +40,10 @@
   <SolidColorBrush x:Key="TrackListColumnHeaderForegroundBrush" Color="{DynamicResource TrackListColumnHeaderForegroundColor}" />
   <SolidColorBrush x:Key="TrackListColumnHeaderBackgroundBrush" Color="{DynamicResource TrackListColumnHeaderBackgroundColor}" />
   <SolidColorBrush x:Key="TrackListItemForegroundBrush" Color="{DynamicResource TrackListItemForegroundColor}" />
-  <SolidColorBrush x:Key="TrackListItemBackgroundBrush" Color="{DynamicResource TrackListItemBackgroundColor}" />
+  <SolidColorBrush x:Key="TrackListItemBackgroundAlt1Brush" Color="{DynamicResource TrackListItemBackgroundAlt1Color}" />
+  <SolidColorBrush x:Key="TrackListItemBackgroundAlt2Brush" Color="{DynamicResource TrackListItemBackgroundAlt2Color}" />
+  <SolidColorBrush x:Key="TrackListSelectedItemForegroundBrush" Color="{DynamicResource TrackListSelectedItemItemForegroundColor}" />
+  <SolidColorBrush x:Key="TrackListSelectedItemBackgroundBrush" Color="{DynamicResource TrackListSelectedItemItemBackgroundColor}" />
   <SolidColorBrush x:Key="TrackListMouseOverItemForegroundBrush" Color="{DynamicResource TrackListMouseOverItemForegroundColor}" />
   <SolidColorBrush x:Key="TrackListMouseOverItemBackgroundBrush" Color="{DynamicResource TrackListMouseOverItemBackgroundColor}" />
   <SolidColorBrush x:Key="TrackListTipForegroundBrush" Color="{DynamicResource TrackListTipForegroundColor}" />
@@ -50,8 +55,10 @@
   <SolidColorBrush x:Key="PlayerStartGradientBrush" Color="{DynamicResource PlayStartGradientColor}" />
   <SolidColorBrush x:Key="PlayerEndGradientBrush" Color="{DynamicResource PlayEndGradientColor}" />
 
-  <SolidColorBrush x:Key="PlayPauseButtonBrush" Color="{DynamicResource PlayPauseButtonColor}" />
-  <SolidColorBrush x:Key="PlayPauseButtonPressedBrush" Color="{DynamicResource PlayPauseButtonPressedColor}" />
+  <SolidColorBrush x:Key="PlayerControlButtonBrush" Color="{DynamicResource PlayerControlButtonColor}" />
+  <SolidColorBrush x:Key="PlayerControlButtonBorderBrush" Color="{DynamicResource PlayerControlButtonBorderColor}" />
+  <SolidColorBrush x:Key="PlayerControlButtonPressedBrush" Color="{DynamicResource PlayerControlButtonPressedColor}" />
+  <SolidColorBrush x:Key="PlayerControlButtonMouseOverBorderBrush" Color="{DynamicResource PlayerControlButtonMouseOverBorderColor}" />
 
   <SolidColorBrush x:Key="MenuTextForegroundBrush" Color="{DynamicResource MenuTextForegroundColor}" />
   <SolidColorBrush x:Key="MenuDisabledTextBrush" Color="{DynamicResource MenuDisabledTextColor}" />
@@ -79,6 +86,25 @@
   <sys:Double x:Key="AlbumSize">100</sys:Double>
   <sys:Double x:Key="ControlPadding">2</sys:Double>
   <Thickness x:Key="ControlPaddingMargin">2</Thickness>
+
+  <VisualBrush x:Key="CdBrush" Stretch="Fill">
+    <VisualBrush.Visual>
+      <Canvas
+        Width="48"
+        Height="48"
+        Clip="F1 M 0,0L 48,0L 48,48L 0,48L 0,0"
+        UseLayoutRounding="False">
+        <Path
+          Canvas.Left="11"
+          Canvas.Top="11"
+          Width="26"
+          Height="26"
+          Data="F1 M 24,11C 31.1797,11 37,16.8203 37,24C 37,31.1797 31.1797,37 24,37C 16.8203,37 11,31.1797 11,24C 11,16.8203 16.8203,11 24,11 Z M 24,21C 22.3431,21 21,22.3432 21,24C 21,25.6569 22.3431,27 24,27C 25.6568,27 27,25.6569 27,24C 27,22.3432 25.6568,21 24,21 Z M 31.433,32.1087C 32.7948,30.8598 33.841,29.2722 34.4383,27.4795L 28.7447,25.5816C 28.4732,26.3965 27.9976,27.1181 27.3786,27.6858L 31.433,32.1087 Z M 27.8634,34.3024C 28.5993,34.0263 29.2977,33.6736 29.949,33.2541L 26.7041,28.2064L 25.7561,28.6829L 27.8634,34.3024 Z M 16.7956,15.6873C 15.0147,17.2321 13.7352,19.3397 13.2338,21.7334L 19.1063,22.9697C 19.3342,21.8817 19.9158,20.9237 20.7253,20.2215L 16.7956,15.6873 Z "
+          Fill="#FF707070"
+          Stretch="Fill" />
+      </Canvas>
+    </VisualBrush.Visual>
+  </VisualBrush>
 
 </ResourceDictionary>
 
