--- a/LinkerPlayer/Themes/Blue.xaml
+++ b/LinkerPlayer/Themes/Blue.xaml
@@ -1,12 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">#EBEBEB</Color>
+  <Color x:Key="TitleBarBackgroundColor">#40586A</Color>
 
-  <Color x:Key="MainWindowGradientStartColor">#597080</Color>
+  <Color x:Key="MainWindowGradientStartColor">#40586A</Color>
   <Color x:Key="MainWindowGradientEndColor">#597080</Color>
 
-  <Color x:Key="ControlPrimaryAccentColor">Cyan</Color>
+  <Color x:Key="ChildWindowBackgroundColor">#475966</Color>
+
+  <Color x:Key="ControlPrimaryAccentColor">DeepSkyBlue</Color>
   <Color x:Key="ControlSecondaryAccentColor">DarkCyan</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
 
@@ -20,10 +22,11 @@
   <Color x:Key="StandardTextForegroundColor">SteelBlue</Color>
   <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
-  <Color x:Key="PlaylistItemForegroundColor">Black</Color>
-  <Color x:Key="PlaylistItemBackgroundColor">SteelBlue</Color>
-  <Color x:Key="PlaylistMouseOverItemForegroundColor">White</Color>
-  <Color x:Key="PlaylistMouseOverItemBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="PlaylistTabForegroundColor">Black</Color>
+  <Color x:Key="PlaylistTabBackgroundColor">Gray</Color>
+
+  <Color x:Key="PlaylistMouseOverItemForegroundColor">Black</Color>
+  <Color x:Key="PlaylistMouseOverItemBackgroundColor">White</Color>
   <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
 
   <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
@@ -33,10 +36,13 @@
   <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
   <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
-  <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
-  <Color x:Key="TrackListColumnHeaderBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="TrackListColumnHeaderForegroundColor">#EBEBEB</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">#597080</Color>
   <Color x:Key="TrackListItemForegroundColor">Black</Color>
-  <Color x:Key="TrackListItemBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="TrackListItemBackgroundAlt1Color">#E2E9EE</Color>
+  <Color x:Key="TrackListItemBackgroundAlt2Color">#EEF1F5</Color>
+  <Color x:Key="TrackListSelectedItemItemForegroundColor">Black</Color>
+  <Color x:Key="TrackListSelectedItemItemBackgroundColor">SkyBlue</Color>
   <Color x:Key="TrackListMouseOverItemForegroundColor">Black</Color>
   <Color x:Key="TrackListMouseOverItemBackgroundColor">LightSteelBlue</Color>
   <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
@@ -44,13 +50,15 @@
   <Color x:Key="TrackListTipForegroundColor">Black</Color>
 
   <Color x:Key="PlayerForegroundColor">Black</Color>
-  <Color x:Key="PlayerBackgroundColor">#597080</Color>
+  <Color x:Key="PlayerBackgroundColor">#40586A</Color>
   <Color x:Key="PlayerActiveColor">DarkGray</Color>
   <Color x:Key="PlayStartGradientColor">#FFFFFF</Color>
   <Color x:Key="PlayEndGradientColor">#FFFFFF</Color>
 
-  <Color x:Key="PlayPauseButtonColor">#EBEBEB</Color>
-  <Color x:Key="PlayPauseButtonPressedColor">#888888</Color>
+  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
+  <Color x:Key="PlayerControlButtonBorderColor">#EBEBEB</Color>
+  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
+  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
 
   <Color x:Key="MenuTextForegroundColor">#999999</Color>
   <Color x:Key="MenuDisabledTextColor">#999999</Color>
