--- a/LinkerPlayer/Themes/Light.xaml
+++ b/LinkerPlayer/Themes/Light.xaml
@@ -6,6 +6,8 @@
   <Color x:Key="MainWindowGradientStartColor">#EEF1F5</Color>
   <Color x:Key="MainWindowGradientEndColor">#EEF1F5</Color>
 
+  <Color x:Key="ChildWindowBackgroundColor">#CCCCCC</Color>
+
   <Color x:Key="ControlPrimaryAccentColor">#673AB7</Color>
   <Color x:Key="ControlSecondaryAccentColor">#3B2A5A</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
@@ -20,8 +22,8 @@
   <Color x:Key="StandardTextForegroundColor">SteelBlue</Color>
   <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
-  <Color x:Key="PlaylistItemForegroundColor">Black</Color>
-  <Color x:Key="PlaylistItemBackgroundColor">White</Color>
+  <Color x:Key="PlaylistTabForegroundColor">Black</Color>
+  <Color x:Key="PlaylistTabBackgroundColor">White</Color>
   <Color x:Key="PlaylistMouseOverItemForegroundColor">Black</Color>
   <Color x:Key="PlaylistMouseOverItemBackgroundColor">LightGray</Color>
   <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
@@ -34,9 +36,12 @@
   <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
   <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
-  <Color x:Key="TrackListColumnHeaderBackgroundColor">White</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">GhostWhite</Color>
   <Color x:Key="TrackListItemForegroundColor">Black</Color>
-  <Color x:Key="TrackListItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListItemBackgroundAlt1Color">GhostWhite</Color>
+  <Color x:Key="TrackListItemBackgroundAlt2Color">LightGray</Color>
+  <Color x:Key="TrackListSelectedItemItemForegroundColor">Black</Color>
+  <Color x:Key="TrackListSelectedItemItemBackgroundColor">Gray</Color>
   <Color x:Key="TrackListMouseOverItemForegroundColor">Black</Color>
   <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
   <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
@@ -49,8 +54,8 @@
   <Color x:Key="PlayStartGradientColor">White</Color>
   <Color x:Key="PlayEndGradientColor">White</Color>
 
-  <Color x:Key="PlayPauseButtonColor">#EBEBEB</Color>
-  <Color x:Key="PlayPauseButtonPressedColor">#888888</Color>
+  <Color x:Key="PlayerControlButtonColor">#EBEBEB</Color>
+  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
 
   <Color x:Key="MenuTextForegroundColor">#999999</Color>
   <Color x:Key="MenuDisabledTextColor">#999999</Color>
