--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -1,125 +1,113 @@
 ﻿<Window
-    x:Class="LinkerPlayer.Windows.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-    Title="LinkerPlayer"
-    Width="1280"
-    Height="710"
-    MinWidth="800"
-    MinHeight="450"
-    AllowsTransparency="True"
-    Background="Red"
-    Closed="Window_Closed"
-    Closing="Window_Closing"
-    FontFamily="{materialDesign:MaterialDesignFont}"
-    Icon="/Images/app64.ico"
-    IsVisibleChanged="Window_IsVisibleChanged"
-    Loaded="Window_Loaded"
-    MouseDown="Window_MouseDown"
-    StateChanged="Window_StateChanged"
-    TextElement.FontSize="14"
-    TextElement.FontWeight="Medium"
-    TextElement.Foreground="{DynamicResource DefaultTextBrush}"
-    WindowStyle="None"
-    mc:Ignorable="d">
+  x:Class="LinkerPlayer.Windows.MainWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
+  Title="LinkerPlayer"
+  Width="1280"
+  Height="730"
+  MinWidth="800"
+  MinHeight="450"
+  AllowsTransparency="True"
+  Closed="Window_Closed"
+  Closing="Window_Closing"
+  FontFamily="{materialDesign:MaterialDesignFont}"
+  Icon="/Images/app64.ico"
+  IsVisibleChanged="Window_IsVisibleChanged"
+  Loaded="Window_Loaded"
+  MouseDown="Window_MouseDown"
+  StateChanged="Window_StateChanged"
+  TextElement.FontSize="14"
+  TextElement.FontWeight="Medium"
+  TextElement.Foreground="{DynamicResource DefaultTextBrush}"
+  WindowStyle="None"
+  mc:Ignorable="d">
 
-    <WindowChrome.WindowChrome>
-        <WindowChrome CaptionHeight="25" />
-    </WindowChrome.WindowChrome>
+  <WindowChrome.WindowChrome>
+    <WindowChrome CaptionHeight="30" />
+  </WindowChrome.WindowChrome>
 
-    <Grid Focusable="True">
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                <GradientStop Color="{DynamicResource MainWindowGradientStartColor}" />
-                <GradientStop Offset="1" Color="{DynamicResource MainWindowGradientEndColor}" />
-            </LinearGradientBrush>
-        </Grid.Background>
+  <Grid Focusable="True">
+    <Grid.Background>
+      <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+        <GradientStop Color="{DynamicResource MainWindowGradientStartColor}" />
+        <GradientStop Offset="1" Color="{DynamicResource MainWindowGradientEndColor}" />
+      </LinearGradientBrush>
+    </Grid.Background>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
-            <RowDefinition />
-            <RowDefinition Height="80" />
-        </Grid.RowDefinitions>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="40" />
+      <RowDefinition />
+      <RowDefinition Height="80" />
+    </Grid.RowDefinitions>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition
-                Width="25*"
-                MinWidth="240"
-                MaxWidth="340" />
-            <ColumnDefinition Width="75*" />
-            <ColumnDefinition Width="60" />
-        </Grid.ColumnDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition
+        Width="25*"
+        MinWidth="240"
+        MaxWidth="340" />
+      <ColumnDefinition Width="75*" />
+      <ColumnDefinition Width="60" />
+    </Grid.ColumnDefinitions>
 
-        <!--  Title Bar  -->
-        <userControls:TitlebarButtons
-            x:Name="TitlebarButtons"
-            Grid.Row="0"
-            Grid.ColumnSpan="3"
-            Panel.ZIndex="1" />
+    <!--  Title Bar  -->
+    <userControls:TitlebarButtons
+      x:Name="TitlebarButtons"
+      Grid.Row="0"
+      Grid.ColumnSpan="3"
+      Panel.ZIndex="1" />
 
-        <!--<Border
-            Grid.Row="0"
-            Grid.Column="0"
-            Background="Black"
-            BorderBrush="White"
-            BorderThickness="0,0,0,2"
-            Opacity="0.4" />-->
+    <userControls:PlaylistList
+      x:Name="PlaylistList"
+      Grid.Row="0"
+      Grid.Column="1"
+      Grid.ColumnSpan="2" />
 
-        <!--<userControls:NewPlaylistButton Grid.Row="0" Grid.Column="0" />-->
+    <!--  Main Window Body  -->
+    <!--<Border
+      Grid.Row="1"
+      Grid.Column="0"
+      Background="Black"
+      Opacity="0.4" />-->
 
-        <userControls:PlaylistList
-            x:Name="PlaylistList"
-            Grid.Row="0"
-            Grid.Column="1"
-            Grid.ColumnSpan="2" />
+    <userControls:TrackInfo
+      x:Name="TrackInfo"
+      Grid.Row="1"
+      Grid.Column="0" />
 
-        <!--  Main Window Body  -->
-        <Border
-            Grid.Row="1"
-            Grid.Column="0"
-            Background="Black"
-            Opacity="0.4" />
+    <userControls:TracksDataGrid
+      x:Name="TracksTable"
+      Grid.Row="1"
+      Grid.Column="1" />
 
-        <!--<userControls:PlaylistList
-            x:Name="PlaylistList"
-            Grid.Row="1"
-            Grid.Column="0" />-->
+    <materialDesign:Snackbar
+      Name="InfoSnackbar"
+      Grid.Row="1"
+      Grid.Column="0"
+      Grid.ColumnSpan="3"
+      IsActive="False"
+      MessageQueue="{materialDesign:MessageQueue}" />
 
-        <userControls:TrackList
-            x:Name="TrackList"
-            Grid.Row="1"
-            Grid.Column="1" />
+    <!--<Border
+      Grid.Row="1"
+      Grid.Column="2"
+      Background="Black"
+      Opacity="0.4" />-->
 
-        <materialDesign:Snackbar
-            Name="InfoSnackbar"
-            Grid.Row="1"
-            Grid.Column="0"
-            Grid.ColumnSpan="3"
-            IsActive="False"
-            MessageQueue="{materialDesign:MessageQueue}" />
+    <userControls:FunctionButtons
+      x:Name="FunctionButtons"
+      Grid.Row="1"
+      Grid.Column="2" />
 
-        <Border
-            Grid.Row="1"
-            Grid.Column="2"
-            Background="Black"
-            Opacity="0.4" />
+    <userControls:PlayerControls
+      x:Name="PlayerControls"
+      Grid.Row="2"
+      Grid.Column="0"
+      Grid.ColumnSpan="3" />
 
-        <userControls:FunctionButtons
-            x:Name="FunctionButtons"
-            Grid.Row="1"
-            Grid.Column="2" />
-
-        <!--  Tray Icon  -->
-        <userControls:PlayerControls
-            x:Name="PlayerControls"
-            Grid.Row="2"
-            Grid.Column="0"
-            Grid.ColumnSpan="3" />
-
-        <userControls:TrayIcon Grid.Row="0" Grid.Column="0" />
-    </Grid>
+    <!--<userControls:TrayIcon Grid.Row="0" Grid.Column="0" />-->
+  </Grid>
 </Window>
