--- a/LinkerPlayer/Windows/SettingsWindow.xaml
+++ b/LinkerPlayer/Windows/SettingsWindow.xaml
@@ -1,235 +1,213 @@
 ﻿<Window
-    x:Class="LinkerPlayer.Windows.SettingsWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:models="clr-namespace:LinkerPlayer.Models"
-    xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-    Title="Settings"
-    Width="610"
-    Height="400"
-    MinWidth="610"
-    MinHeight="400"
-    AllowsTransparency="True"
-    Closing="Window_Closing"
-    Loaded="Window_Loaded"
-    MouseDown="Window_MouseDown"
-    StateChanged="Window_StateChanged"
-    WindowStyle="None"
-    mc:Ignorable="d">
+  x:Class="LinkerPlayer.Windows.SettingsWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:models="clr-namespace:LinkerPlayer.Models"
+  xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
+  Title="Settings"
+  Width="610"
+  Height="400"
+  MinWidth="610"
+  MinHeight="400"
+  AllowsTransparency="True"
+  Closing="Window_Closing"
+  Loaded="Window_Loaded"
+  MouseDown="Window_MouseDown"
+  StateChanged="Window_StateChanged"
+  WindowStyle="None"
+  mc:Ignorable="d"
+  xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+  xmlns:converters="clr-namespace:MaterialDesignThemes.Wpf.Converters;assembly=MaterialDesignThemes.Wpf">
 
-    <WindowChrome.WindowChrome>
-        <WindowChrome CaptionHeight="25" />
-    </WindowChrome.WindowChrome>
+  <WindowChrome.WindowChrome>
+    <WindowChrome CaptionHeight="25" />
+  </WindowChrome.WindowChrome>
 
-    <Window.Resources>
-        <Style x:Key="NoStylingButton" TargetType="{x:Type Button}">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border
-                            x:Name="border"
-                            Background="Transparent"
-                            CornerRadius="10">
-                            <ContentPresenter />
-                        </Border>
+  <Window.Resources>
+    <Style x:Key="NoStylingButton" TargetType="{x:Type Button}">
+      <Setter Property="Template">
+        <Setter.Value>
+          <ControlTemplate TargetType="Button">
+            <Border
+              x:Name="border"
+              Background="Transparent"
+              CornerRadius="10">
+              <ContentPresenter />
+            </Border>
 
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="border" Property="Background" Value="#3b3b42" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+            <ControlTemplate.Triggers>
+              <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="border" Property="Background" Value="#3b3b42" />
+              </Trigger>
+            </ControlTemplate.Triggers>
+          </ControlTemplate>
+        </Setter.Value>
+      </Setter>
 
+    </Style>
+    <Style x:Key="FocusVisual">
+      <Setter>
+        <Setter.Value>
+          <ControlTemplate>
+            <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
+          </ControlTemplate>
+        </Setter.Value>
+      </Setter>
+    </Style>
+
+  </Window.Resources>
+
+  <Grid Focusable="True">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="35" />
+      <RowDefinition />
+      <RowDefinition Height="Auto" />
+    </Grid.RowDefinitions>
+
+    <Grid.Background>
+      <SolidColorBrush Color="{DynamicResource ChildWindowBackgroundColor}" />
+    </Grid.Background>
+
+    <userControls:TitlebarButtons x:Name="TitlebarButtons" Panel.ZIndex="1" />
+
+    <TabControl Name="TabControl" Grid.Row="1">
+      <TabControl.Resources>
+        <Style TargetType="TextBlock">
+          <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
+          <Setter Property="FontSize" Value="16" />
+          <Setter Property="Foreground" Value="#BDBDBD" />
+          <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
-    </Window.Resources>
 
-    <Grid Focusable="True">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="35" />
-            <RowDefinition />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+        <Style TargetType="ComboBox">
+          <Setter Property="FontFamily" Value="/Fonts/#Montserrat" />
+          <Setter Property="FontSize" Value="16" />
+          <Setter Property="VerticalAlignment" Value="Center" />
+          <Setter Property="Height" Value="27" />
+        </Style>
 
-        <Grid.Background>
-            <SolidColorBrush Color="{DynamicResource FirstBackgroundColor}" />
-        </Grid.Background>
+        <Style TargetType="Grid">
+          <Setter Property="Margin" Value="0,0,0,20" />
+        </Style>
 
-        <userControls:TitlebarButtons x:Name="TitlebarButtons" Panel.ZIndex="1" />
+        <Style TargetType="materialDesign:PackIcon">
+          <Setter Property="VerticalAlignment" Value="Center" />
+          <Setter Property="HorizontalAlignment" Value="Center" />
+        </Style>
+      </TabControl.Resources>
 
-        <TabControl Name="TabControl" Grid.Row="1">
-            <TabControl.Resources>
-                <Style TargetType="TextBlock">
-                    <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
-                    <Setter Property="FontSize" Value="16" />
-                    <Setter Property="Foreground" Value="#BDBDBD" />
-                    <Setter Property="VerticalAlignment" Value="Center" />
-                </Style>
+      <!--  General Tab  -->
+      <TabItem>
+        <TabItem.Header>
+          <TextBlock>General</TextBlock>
+        </TabItem.Header>
 
-                <Style TargetType="ComboBox">
-                    <Setter Property="FontFamily" Value="/Fonts/#Montserrat" />
-                    <Setter Property="FontSize" Value="16" />
-                    <Setter Property="VerticalAlignment" Value="Center" />
-                    <Setter Property="Height" Value="27" />
-                </Style>
+        <TabItem.Content>
+          <StackPanel Margin="30,50,30,0">
 
-                <Style TargetType="Grid">
-                    <Setter Property="Margin" Value="0,0,0,20" />
-                </Style>
+            <!--  Main Output Device  -->
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="265" />
+                <ColumnDefinition />
+              </Grid.ColumnDefinitions>
 
-                <Style TargetType="materialDesign:PackIcon">
-                    <Setter Property="VerticalAlignment" Value="Center" />
-                    <Setter Property="HorizontalAlignment" Value="Center" />
-                </Style>
-            </TabControl.Resources>
+              <TextBlock Grid.Column="0">Select main output device</TextBlock>
 
-            <!--  Audio Tab  -->
-            <TabItem>
-                <TabItem.Header>
-                    <TextBlock>Audio</TextBlock>
-                </TabItem.Header>
+              <ComboBox
+                Name="MainOutputDevicesList"
+                Grid.Column="1"
+                Foreground="#BDBDBD" />
+            </Grid>
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="180" />
+                <ColumnDefinition />
+                <ColumnDefinition Width="100" />
+              </Grid.ColumnDefinitions>
 
-                <TabItem.Content>
-                    <StackPanel Margin="30,50,30,0">
+              <TextBlock Grid.Column="0">Theme</TextBlock>
+              <ComboBox
+                x:Name="ThemesList"
+                Grid.Column="2"
+                HorizontalContentAlignment="Center"
+                ItemsSource="{Binding Path=ThemeColors}"
+                SelectionChanged="OnThemeSelectionChanged">
+                <ComboBoxItem Content="Light" Tag="{x:Static models:ThemeColors.Light}" />
+                <ComboBoxItem Content="Gray" Tag="{x:Static models:ThemeColors.Gray}" />
+                <ComboBoxItem Content="Dark" Tag="{x:Static models:ThemeColors.Dark}" />
+                <ComboBoxItem Content="Blue" Tag="{x:Static models:ThemeColors.Blue}" />
+                <ComboBoxItem Content="Black" Tag="{x:Static models:ThemeColors.Midnight}" />
+              </ComboBox>
+            </Grid>
 
-                        <!--  Main Output Device  -->
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="265" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
+            <!--  Enable Sound Wave Visualization  -->
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="40" />
+              </Grid.ColumnDefinitions>
 
-                            <TextBlock Grid.Column="0">Select main output device</TextBlock>
+              <TextBlock Grid.Column="0">Enable sound wave visualization</TextBlock>
+              <ToggleButton Name="VisualizationEnabled" Grid.Column="1" />
+            </Grid>
 
-                            <ComboBox
-                                Name="MainOutputDevicesList"
-                                Grid.Column="1"
-                                Foreground="#BDBDBD" />
-                        </Grid>
+            <!--  Minimize to Tray On Close  -->
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="40" />
+              </Grid.ColumnDefinitions>
 
-                        <!--  Additional Output Device  -->
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="265" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
+              <TextBlock Grid.Column="0">Minimize to tray on close</TextBlock>
+              <ToggleButton Name="MinimizeToTrayEnabled" Grid.Column="1" />
+            </Grid>
 
-                            <TextBlock Grid.Column="0">Select additional output device</TextBlock>
+            <!--  Enable equalizer on start  -->
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="40" />
+              </Grid.ColumnDefinitions>
 
-                            <ComboBox
-                                Name="AdditionalOutputDevicesList"
-                                Grid.Column="1" />
-                        </Grid>
+              <TextBlock Grid.Column="0">Enable equalizer on start</TextBlock>
+              <ToggleButton Name="EqualizerOnStartEnabled" Grid.Column="1" />
+            </Grid>
+          </StackPanel>
+        </TabItem.Content>
+      </TabItem>
 
-                        <!--  Enable Output to Additional Device  -->
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="40" />
-                            </Grid.ColumnDefinitions>
+      <!--  Hotkeys Tab  -->
+      <TabItem>
+        <TabItem.Header>
+          <TextBlock Foreground="White">Hotkeys</TextBlock>
+        </TabItem.Header>
 
-                            <TextBlock Grid.Column="0">Enable output to additional device</TextBlock>
-                            <ToggleButton Name="AdditionalOutputEnabled" Grid.Column="1" />
-                        </Grid>
+        <TabItem.Content>
+          <StackPanel Name="HotkeyStackPanel" Margin="30,50,30,0" />
+        </TabItem.Content>
+      </TabItem>
 
-                    </StackPanel>
-                </TabItem.Content>
-            </TabItem>
+    </TabControl>
 
-            <!--  Hotkeys Tab  -->
-            <TabItem>
-                <TabItem.Header>
-                    <TextBlock Foreground="White">Hotkeys</TextBlock>
-                </TabItem.Header>
+    <Button Style="{DynamicResource TransparentButton}"
+      Grid.Row="2"
+      Width="100"
+      Height="30"
+      Margin="0,0,25,25"
+      HorizontalAlignment="Center"
+      Background="Transparent"
+      Click="Save_Click"
+      Content="Save"
+      Foreground="{DynamicResource ControlPrimaryAccentBrush}" />
 
-                <TabItem.Content>
-                    <StackPanel Name="HotkeyStackPanel" Margin="30,50,30,0" />
-                </TabItem.Content>
-            </TabItem>
-
-            <!--  Other Tab  -->
-            <TabItem>
-                <TabItem.Header>
-                    <TextBlock>Other</TextBlock>
-                </TabItem.Header>
-
-                <TabItem.Content>
-                    <StackPanel Margin="70,50,70,0">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="180" />
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="100" />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0">Theme</TextBlock>
-                            <ComboBox
-                                x:Name="ThemesList"
-                                Grid.Column="2"
-                                HorizontalContentAlignment="Center"
-                                ItemsSource="{Binding Path=ThemeColors}" SelectionChanged="OnThemeSelectionChanged">
-                                <ComboBoxItem Content="Light" Tag="{x:Static models:ThemeColors.Light}" />
-                                <ComboBoxItem Content="Gray" Tag="{x:Static models:ThemeColors.Gray}" />
-                                <ComboBoxItem Content="Dark" Tag="{x:Static models:ThemeColors.Dark}" />
-                                <ComboBoxItem Content="Blue" Tag="{x:Static models:ThemeColors.Blue}" />
-                                <ComboBoxItem Content="Black" Tag="{x:Static models:ThemeColors.Midnight}" />
-                            </ComboBox>
-                        </Grid>
-
-                        <!--  Enable Sound Wave Visualization  -->
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="40" />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0">Enable sound wave visualization</TextBlock>
-                            <ToggleButton Name="VisualizationEnabled" Grid.Column="1" />
-                        </Grid>
-
-                        <!--  Minimize to Tray On Close  -->
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="40" />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0">Minimize to tray on close</TextBlock>
-                            <ToggleButton Name="MinimizeToTrayEnabled" Grid.Column="1" />
-                        </Grid>
-
-                        <!--  Enable equalizer on start  -->
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="40" />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0">Enable equalizer on start</TextBlock>
-                            <ToggleButton Name="EqualizerOnStartEnabled" Grid.Column="1" />
-                        </Grid>
-                    </StackPanel>
-                </TabItem.Content>
-            </TabItem>
-        </TabControl>
-
-        <Button
-            Grid.Row="2"
-            Width="150"
-            Margin="0,0,25,25"
-            HorizontalAlignment="Right"
-            Background="Transparent"
-            Click="Save_Click"
-            Content="Save" />
-
-        <materialDesign:Snackbar
-            Name="InfoSnackbar"
-            Grid.Row="1"
-            IsActive="False"
-            MessageQueue="{materialDesign:MessageQueue}" />
-    </Grid>
+    <materialDesign:Snackbar
+      Name="InfoSnackbar"
+      Grid.Row="1"
+      IsActive="False"
+      MessageQueue="{materialDesign:MessageQueue}" />
+  </Grid>
 </Window>
